--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
     </div>
 
     <div class="product">
-      <img src="https://m.media-amazon.com/images/I/61vvAx-yOUL._AC_.jpg" alt="Pokemon" />
+      <img src="https://m.media-amazon.com/images/I/71vFKBpKakL._AC_SL1500_.jpg" alt="Pokemon" />
       <h3>Pokemon Cards</h3>
       <p>50 Pokemon Cards Plus 1 Ultra Rare Legendary Pokemon Card | Bundle with LCC Deck Box.</p>
       <a href="https://amzn.to/3HLz7P4?tag=peachgutz13-20" class="buy-btn" target="_blank">Buy on Amazon</a>
