--- a/index.html
+++ b/index.html
@@ -83,10 +83,10 @@
   <section id="products" class="products">
 
     <div class="product">
-      <img src="https://m.media-amazon.com/images/I/71hrQmNQDSL._AC_SL1500_.jpg" alt="TOZO T10 Earbuds" />
-      <h3>TOZO T10 Bluetooth 5.3 Wireless Earbuds</h3>
-      <p>High-quality sound with waterproof design and wireless charging case.</p>
-      <a href="https://www.amazon.com/dp/B07RGZ5NKS?tag=peachgutz13-20" class="buy-btn" target="_blank">Buy on Amazon</a>
+      <img src="https://m.media-amazon.com/images/I/71cVOgvystL._AC_SL1500_.jpg" alt="TOZO T6 True Wireless" />
+      <h3>TOZO T6 True Wireless Earbuds Bluetooths</h3>
+      <p>5.3 Headphones 50H Long Playtime, Wireless Charging Case.</p>
+      <a href="https://amzn.to/3G9ITtE?tag=peachgutz13-20" class="buy-btn" target="_blank">Buy on Amazon</a>
     </div>
 
     <div class="product">
