--- a/index.html
+++ b/index.html
@@ -90,10 +90,10 @@
     </div>
 
     <div class="product">
-      <img src="https://m.media-amazon.com/images/I/71vFKBpKakL._AC_SL1500_.jpg" alt="AirPods Pro" />
-      <h3>Apple AirPods Pro (2nd Generation)</h3>
-      <p>Active noise cancellation, transparency mode, personalized spatial audio.</p>
-      <a href="https://www.amazon.com/dp/B0BDHWDR12?tag=peachgutz13-20" class="buy-btn" target="_blank">Buy on Amazon</a>
+      <img src="https://m.media-amazon.com/images/I/81s-9HlcnvL._AC_SL1500_.jpg" alt="POKEMON" />
+      <h3>POKEMON TCG</h3>
+      <p>Scarlet & Violet Stellar Crown Booster Box.</p>
+      <a href="https://amzn.to/4kT68as?tag=peachgutz13-20" class="buy-btn" target="_blank">Buy on Amazon</a>
     </div>
 
     <div class="product">
