--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     body {
       font-family: Arial, sans-serif;
       margin: 0;
-      background: #f4f4f4;
+      background: HP Mobile Category Card 1050x1050 Prime Blue Foil.png;
       color: #333;
     }
     header {
