--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
     body {
       font-family: Arial, sans-serif;
       margin: 0;
-      background: HP Mobile Category Card 1050x1050 Prime Blue Foil.png;
-      color: #333;
+      background: #f4f4f4;
+      color: #0000FF;
     }
     header {
       background-color: #232f3e;
