--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
       font-family: Arial, sans-serif;
       margin: 0;
       background: #f4f4f4;
-      color: #0000FF;
+      color: #333;
     }
     header {
-      background-color: #232f3e;
+      background-color: #0000FF;
       color: white;
       padding: 1rem;
       text-align: center;
