--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       color: #333;
     }
     header {
-      background-color: #0000FF;
+      background-color: #232f3e;
       color: white;
       padding: 1rem;
       text-align: center;
@@ -111,10 +111,10 @@
     </div>
 
     <div class="product">
-      <img src="https://m.media-amazon.com/images/I/91F3W3XjzfL._AC_SL1500_.jpg" alt="Kindle Paperwhite" />
-      <h3>Kindle Paperwhite (8 GB)</h3>
-      <p>Waterproof e-reader with a glare-free display and adjustable warm light.</p>
-      <a href="https://www.amazon.com/dp/B08KTZ8249?tag=peachgutz13-20" class="buy-btn" target="_blank">Buy on Amazon</a>
+      <img src="https://m.media-amazon.com/images/I/61gL2PWEihL._AC_UF894,1000_QL80_FMwebp_.jpg" alt="Pokemon Trading Card Game" />
+      <h3>Pokemon Trading Card Game</h3>
+      <p>Scarlet & Violet High Class Shiny Treasure EX Booster Box (JAPANESE)-10Packs.</p>
+      <a href="https://amzn.to/4ec696R?tag=peachgutz13-20" class="buy-btn" target="_blank">Buy on Amazon</a>
     </div>
 
     <div class="product">
